--- a/index.html
+++ b/index.html
@@ -19,26 +19,26 @@
             <p>Distribuye 4 puntos entre las cuatro opciones de cada pregunta.</p>
             <script>
                 const questions = [
-                    "Cuando aprendo, prefiero:",
-                    "Aprendo mejor cuando:",
-                    "Cuando aprendo, me gusta:",
-                    "Cuando aprendo algo nuevo, prefiero:",
-                    "Cuando estoy aprendiendo, valoro más:",
-                    "Aprendo más cuando:",
-                    "Cuando enfrento un problema:",
-                    "Para mí, el aprendizaje significa:",
-                    "En el proceso de aprendizaje, prefiero:"
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?",
+                    "¿Cómo aprendo mejor?"
                 ];
                 const options = [
-                    ["Afectivamente", "Observando", "Analíticamente", "Activamente"],
-                    ["Intuitivamente", "Paciente y reflexivo", "Lógico y estructurado", "Experimentando"],
-                    ["Personalizar la experiencia", "Percibir el conjunto", "Buscar principios y teorías", "Ir directo a la acción"],
-                    ["Explorar nuevas posibilidades", "Observar y reflexionar antes de actuar", "Analizar los datos antes de sacar conclusiones", "Aplicarlo inmediatamente"],
-                    ["Las experiencias personales", "Ver diferentes perspectivas", "El razonamiento lógico", "Probar y poner en práctica"],
-                    ["Me conecto con los demás", "Observo situaciones antes de actuar", "Analizo la información y busco patrones", "Me lanzo a la acción de inmediato"],
-                    ["Confío en mis emociones y empatía", "Analizo todas las opciones antes de decidir", "Busco modelos y principios teóricos", "Pruebo soluciones en la práctica"],
-                    ["Exploración personal y significado", "Observar y encontrar patrones", "Comprender las ideas a un nivel profundo", "Aplicar el conocimiento de forma práctica"],
-                    ["Relacionarme y vivir experiencias", "Tomarme mi tiempo para analizar lo aprendido", "Comprender conceptos estructurados", "Hacer pruebas y ajustes en el momento"]
+                    ["DISCRIMINANDO. Distinguiendo una cosa de otra.", "ENSAYANDO. Para mejor uso posterior.", "COMPROMETIÉNDO-ME. Involucrándome.", "PRACTICANDO. Poniendo en práctica lo aprendido."],
+                    ["RECEPTIVAMENTE. Me fijo principalmente en lo que recibo.", "APROPIADAMENTE. Acomodándome al objetivo que tengo.", "ANALÍTICAMENTE. Descomponiendo el todo en sus partes.", "IMPARCIALMENTE. Veo todas las opciones que hay sin priorizar ningún tema."],
+                    ["SINTIENDO. Experimentando sensaciones.", "OBSERVANDO Examinando atentamente.", "PENSANDO. Examinando con cuidado para hacerme una idea.", "HACIENDO. Realizando actividades."],
+                    ["ACEPTANDO. Aprobando, dando por correcto.", "CORRIENDO RIESGOS. Exponiéndome a fallar.", "CUIDADOSAMENTE. Examinando el valor de los contenidos.", "EVALUANDO. Fijándome si las ideas son ciertas o correctas."],
+                    ["INTUITIVAMENTE. Teniendo percepciones tal como si las viviera", "PRODUCTIVAMENTE. Con resultados a la vista.", "LÓGICAMENTE. Descubriendo de modo lógico.", "INTERROGANDO. Preguntando a quien sabe más."],
+                    ["EN FORMA ABSTRACTA. Separando lo esencial de las cualidades.", "OBSERVANDO. Examinando atentamente los detalles.", "CONCRETAMENTE. Dedicándome a lo esencial o a lo importante.", "ACTIVAMENTE. Realizando, trabajando, manipulando todo."],
+                    ["ORIENTÁNDOME AL PRESENTE. Lo aprendido me servirá ahora.", "REFLEXIVAMENTE. Considerando detenidamente.", "ORIENTÁNDOME AL FUTURO. Lo aprendido me servirá después.", "PRAGMÁTICAMENTE. Buscando efectos o usos prácticos."],
+                    ["VIVIENDO LAS SITUACIONES.", "OBSERVANDO.", "CONCEPTUALIZANDO. Definiendo las cosas.", "DISEÑANDO FORMAS DE PROBAR LAS IDEAS."],
+                    ["AFECTIVAMENTE. Siendo estimulado por las emociones.", "RESERVADAMENTE. Con cautela y sin manifestación externa.", "RACIONALMENTE. Discerniendo con la razón lo verdadero de lo falso.", "RESPONSABLEMENTE. Obligándome a responder concretamente."]
                 ];
                 let formHtml = "";
                 questions.forEach((question, index) => {
