--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <div class="container">
         <h2>Test de Estilos de Aprendizaje - Kolb</h2>
         <form id="kolbTest">
-            <p>Distribuye 4 puntos entre las cuatro opciones de cada pregunta.</p>
+            <p>Distribuye 4 puntos entre las cuatro opciones de cada pregunta. Ojo, no se puede repetir un mismo puntaje dentro de una fila</p>
             <script>
                 const questions = [
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?",
-                    "¿Cómo aprendo mejor?"
+                    "A: ¿Cómo aprendo mejor?",
+                    "B: ¿Cómo aprendo mejor?",
+                    "C: ¿Cómo aprendo mejor?",
+                    "D: ¿Cómo aprendo mejor?",
+                    "E: ¿Cómo aprendo mejor?",
+                    "F: ¿Cómo aprendo mejor?",
+                    "G: ¿Cómo aprendo mejor?",
+                    "H: ¿Cómo aprendo mejor?",
+                    "I: ¿Cómo aprendo mejor?"
                 ];
                 const options = [
                     ["DISCRIMINANDO. Distinguiendo una cosa de otra.", "ENSAYANDO. Para mejor uso posterior.", "COMPROMETIÉNDO-ME. Involucrándome.", "PRACTICANDO. Poniendo en práctica lo aprendido."],
